--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>BPM Calculator</title>
 </head>
 
 <body>
 
+    <div class="grid">
+        <h1 class="title">BPM Calculator</h1>
+    </div>
+
+    <div class="grid">
+        <h2 id="beats-display" class="bpm-display">Click to start</h1>
+    </div>
+
+    <div class="grid">
+        <button id="bpm" onclick="addBeat()" class="bpm">Start</button>
+    </div>
+
+    <div class="grid">
+        <button id="reset-button" onclick="reset()" class="reset-button">Reset</button>
+    </div>
 
     <script src="app.js"></script>
 </body>
