meta. and links

--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="BPM calculator online free to use">
+    <meta name="keywords" content="bpm music calculator online free">
+    <meta name="author" content="Dominic Marshall">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>BPM Calculator</title>
 </head>
 
 <body>
+    <div class="site-nav grid" id="nav">
+        <div id="portfolio">
+            <a href="https://dominicalanmarshall.com" target="_blank">Portfolio</a>
+        </div>
+        <div id="soothing-sounds">
+            <a href="https://laze.cool" target="_blank">Soothing Sounds</a>
+        </div>
+        <div id="buy-me-a-coffee">
+            <a href="https://www.buymeacoffee.com/damdigital3423" target="_blank">Buy me a coffee?</a>
+        </div>
+    </div>
 
     <div class="grid">
         <h1 class="title">BPM Calculator</h1>
